WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
145587
Subpixel rendering: Composited layer with subpixel gap does not get painted properly when its position changes.
https://bugs.webkit.org/show_bug.cgi?id=145587
Summary
Subpixel rendering: Composited layer with subpixel gap does not get painted p...
alan
Reported
2015-06-02 19:48:14 PDT
When the parent layer moves, the child layer needs to be repainted if the subpixel gap between the layer changes.
Attachments
Patch
(8.08 KB, patch)
2015-06-02 21:10 PDT
,
alan
no flags
Details
Formatted Diff
Diff
Patch
(8.13 KB, patch)
2015-06-03 07:45 PDT
,
alan
no flags
Details
Formatted Diff
Diff
Show Obsolete
(1)
View All
Add attachment
proposed patch, testcase, etc.
alan
Comment 1
2015-06-02 21:10:00 PDT
Created
attachment 254139
[details]
Patch
Simon Fraser (smfr)
Comment 2
2015-06-02 21:25:32 PDT
Not for review?
alan
Comment 3
2015-06-02 21:26:56 PDT
(In reply to
comment #2
)
> Not for review?
:) Yes for review.
Simon Fraser (smfr)
Comment 4
2015-06-02 21:36:46 PDT
Comment on
attachment 254139
[details]
Patch View in context:
https://bugs.webkit.org/attachment.cgi?id=254139&action=review
> LayoutTests/compositing/child-layer-with-subpixel-gap-needs-repaint-when-parent-moves.html:16 > + -webkit-backdrop-filter: invert(1);
Does the test need to use a backdrop filter?
alan
Comment 5
2015-06-03 07:45:52 PDT
Created
attachment 254175
[details]
Patch
alan
Comment 6
2015-06-03 07:47:20 PDT
(In reply to
comment #4
)
> Comment on
attachment 254139
[details]
> Patch > > View in context: >
https://bugs.webkit.org/attachment.cgi?id=254139&action=review
> > > LayoutTests/compositing/child-layer-with-subpixel-gap-needs-repaint-when-parent-moves.html:16 > > + -webkit-backdrop-filter: invert(1); > > Does the test need to use a backdrop filter?
Good point.
WebKit Commit Bot
Comment 7
2015-06-03 08:37:06 PDT
Comment on
attachment 254175
[details]
Patch Clearing flags on attachment: 254175 Committed
r185152
: <
http://trac.webkit.org/changeset/185152
>
WebKit Commit Bot
Comment 8
2015-06-03 08:37:10 PDT
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug